# box-turtle-id

./: .dockerignore  .env.development.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  compare.py  jobs.py  settings.py  submissions.py  sync.py  turtles.py
backend/app/models/: __init__.py  encounter.py  job.py  settings.py  submission.py  survey.py  turtle.py
backend/app/schemas/: __init__.py  job.py  match.py  settings.py  submission.py  turtle.py
backend/app/services/: __init__.py  airtable.py  airtable_client.py  cropper.py  derivatives.py  image.py  sift.py  storage.py  sync_state.py
backend/scripts/: README.md  enrich_locations.py  generate_derivatives.py  recreate_db.py  sync_airtable.py
backend/tests/: conftest.py  test_encounters.py  test_health.py  test_submissions.py  test_sync.py
docs/plans/: 2025-02-18-instruction-page-design.md  2025-02-18-instruction-page-plan.md  2025-02-18-match-profile-page-design.md  2025-02-18-match-profile-page-plan.md  2026-02-18-possible-match-page-design.md  2026-02-18-possible-match-page-plan.md  2026-02-18-welcome-page-design.md  2026-02-18-welcome-page.md  2026-02-19-site-selection-design.md  2026-02-19-site-selection-plan.md  2026-02-21-dev-routing-modal-plan.md  2026-02-21-wireframe-theme-plan.md  2026-02-23-no-match-page.md  (+14 more)
scripts/: dev-hub.mjs
src/: App.tsx  index.css  main.tsx
(+45 files in other folders)
